[package]
authors = ["Sondre Aasemoen <sondre@eons.io>"]
build = "build.rs"
description = "Quickly and easily fetch .gitignore templates from www.gitignore.io"
documentation = "https://github.com/sondr3/git-ignore"
edition = "2021"
homepage = "https://github.com/sondr3/git-ignore"
license = "GPL-3.0-or-later"
name = "git-ignore-generator"
readme = "README.md"
repository = "https://github.com/sondr3/git-ignore"
version = "1.3.3"

[[bin]]
name = "git-ignore"
path = "src/main.rs"

[profile.release]
lto = "fat"

[dependencies]
anyhow = "1.0.86"
attohttpc = { version = "0.28.0", default-features = false, features = [
	"json",
	"compress",
	"tls-rustls",
] }
clap = { version = "4.5.9", features = ["derive", "cargo"] }
clap_complete = "4.5.8"
colored = "2.1.0"
directories = "5"
etcetera = "0.8.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
toml = "0.8.15"

[build-dependencies]
clap = { version = "4.5.9", features = ["derive", "cargo"] }
clap_complete = "4.5.8"
clap_mangen = "0.2.22"
quote = "1.0.36"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
syn = "2.0.72"
