[package]
authors = ["Sondre Aasemoen <sondre@eons.io>"]
build = "build.rs"
description = "Quickly and easily fetch .gitignore templates from www.gitignore.io"
documentation = "https://github.com/sondr3/git-ignore"
edition = "2021"
homepage = "https://github.com/sondr3/git-ignore"
license = "GPL-3.0-or-later"
name = "git-ignore-generator"
readme = "README.md"
repository = "https://github.com/sondr3/git-ignore"
version = "1.4.0"

[[bin]]
name = "git-ignore"
path = "src/main.rs"

[profile.release]
lto = "fat"

[dependencies]
anyhow = "1.0.95"
attohttpc = { version = "0.28.2", default-features = false, features = [
	"json",
	"compress",
	"tls-rustls",
] }
clap = { version = "4.5.23", features = ["derive", "cargo"] }
clap_complete = "4.5.40"
colored = "2.2.0"
directories = "5"
etcetera = "0.8.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
toml = "0.8.19"

[build-dependencies]
clap = { version = "4.5.23", features = ["derive", "cargo"] }
clap_complete = "4.5.40"
clap_mangen = "0.2.24"
quote = "1.0.38"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
syn = "2.0.91"
