[package]
authors = ["Sondre Aasemoen <sondre@eons.io>"]
build = "build.rs"
description = "Quickly and easily fetch .gitignore templates from www.gitignore.io"
documentation = "https://github.com/sondr3/git-ignore"
edition = "2024"
homepage = "https://github.com/sondr3/git-ignore"
license = "GPL-3.0-or-later"
name = "git-ignore-generator"
readme = "README.md"
repository = "https://github.com/sondr3/git-ignore"
version = "1.4.0"

[[bin]]
name = "git-ignore"
path = "src/main.rs"

[profile.release]
lto = "fat"

[dependencies]
anyhow = "1.0.98"
attohttpc = { version = "0.29.2", default-features = false, features = [
    "json",
    "compress",
    "tls-rustls",
] }
clap = { version = "4.5.37", features = ["derive", "cargo"] }
clap_complete = "4.5.48"
colored = "3.0.0"
directories = "6.0.0"
etcetera = "0.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.22"

[build-dependencies]
clap = { version = "4.5.37", features = ["derive", "cargo"] }
clap_complete = "4.5.48"
clap_mangen = "0.2.26"
quote = "1.0.40"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
syn = "2.0.101"
